# inputscriptparser

./: .gitignore  README.ja.md  README.md  pyproject.toml  script5.lark
grammers/: inputscript.lark  labeledscript.lark
inputscriptparser/: __init__.py  common.py  grammers.py  interpreters.py  labeledscript.py  main.py  parser.py  parsers.py  show_script.py
inputscriptparser/parsers/: inputscript.py  labeledscript.py
tests/: test_inputscriptparser.py
