[tool.poetry]
name = "inputscriptparser"
version = "0.1.0"
description = ""
authors = ["takatoh <takatoh.m@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
lark = "^1.1.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[[tool.poetry.source]]
name = "local"
url = "http://localhost:8800/simple/"
default = true

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
