[tool.poetry]
name = "inputscriptparser"
version = "1.1.0"
description = "Parse script-style input data."
authors = ["takatoh <takatoh.m@gmail.com>"]
include = [
    "grammers/inputscript.lark",
    "grammers/labeledscript.lark"
]

[tool.poetry.dependencies]
python = "^3.9"
lark = "^1.1.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[[tool.poetry.source]]
name = "local"
url = "http://localhost:8800/simple/"
default = true

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
ispshow = "inputscriptparser.show_script:main"
