[tool.poetry]
name = "inputscriptparser"
version = "1.2.1"
description = "A parser for script-style input data."
authors = ["takatoh <takatoh.m@gmail.com>"]
include = [
    "grammers/inputscript.lark",
    "grammers/labeledscript.lark",
    "README.ja.md"
]
readme = "README.md"
license = "MIT"
homepage = "https://github.com/takatoh/inputscriptparser"
repository = "https://github.com/takatoh/inputscriptparser"

[tool.poetry.dependencies]
python = "^3.9"
lark = "^1.1.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
ispshow = "inputscriptparser.show_script:main"
